<resources>
    <string name="app_name">ProyectoFirebase</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consultar_tel_fonos">Consultar Teléfonos</string>
    <string name="insertar">Insertar</string>
    <string name="consultar_ventas">Consultar Ventas</string>
    <string name="marca">marca</string>
    <string name="modelo">modelo</string>
    <string name="version_de_android">version de android</string>
    <string name="editar">Editar</string>
    <string name="imagen">imagen</string>
    <string name="volver">Volver</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="apellidos">apellidos</string>
    <string name="nombre">nombre</string>
    <string name="dni">DNI</string>
    <string name="enviar">Enviar</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="borrar">borrar</string>
    <string name="comprar">Comprar</string>
    <string name="logging">Logging</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="register">Register</string>
    <string name="registrarse">Registrarse</string>
</resources>