<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragmentos.InsertFragment" >

    <EditText
        android:id="@+id/etInsertNumTelef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/n_mero_de_tel_fono"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etInsertMarca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etInsertMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/marca"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etInsertModelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInsertNumTelef" />

    <EditText
        android:id="@+id/etInsertModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/modelo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etInsertImagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInsertMarca" />

    <EditText
        android:id="@+id/etInsertImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/imagen"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/etInsertVAndroid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInsertModelo" />

    <Button
        android:id="@+id/btInsertFrgm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInsertVAndroid" />

    <EditText
        android:id="@+id/etInsertVAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/version_de_android"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btInsertFrgm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInsertImagen"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>