<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragmentos.ListaFragment">

    <Button
        android:id="@+id/btInsertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/insertar"
        app:layout_constraintBottom_toTopOf="@id/btVentas"
        app:layout_constraintEnd_toStartOf="@+id/btConsultar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btConsultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar_tel_fonos"
        app:layout_constraintBottom_toBottomOf="@+id/btInsertar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btInsertar"
        app:layout_constraintTop_toTopOf="@+id/btInsertar" />

    <Button
        android:id="@+id/btVentas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar_ventas"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btConsultar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btVentas" />

</androidx.constraintlayout.widget.ConstraintLayout>